# hermes-agent-plugin-web_extract-basic

./: README.md  __init__.py  dependencies.py  plugin.yaml  provider.py  pyproject.toml  requirements.txt
tests/: test_dependencies.py  test_provider.py
