[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-plugin-web-extract-basic"
version = "1.1.1"
description = "Free local web extraction for Hermes Agent using httpx and html-to-markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"httpx>=0.28,<1",
	"html-to-markdown>=3.8,<4",
]
authors = [
	{name = "V1rgul"},
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/V1rgul/hermes-agent-plugin-web_extract-basic"
Documentation = "https://github.com/V1rgul/hermes-agent-plugin-web_extract-basic#readme"

[project.entry-points."hermes_agent.plugins"]
web-basic-web_extract = "basic_web_extract"

[tool.setuptools]
packages = ["basic_web_extract"]
package-dir = {basic_web_extract = "."}

[tool.setuptools.package-data]
basic_web_extract = ["plugin.yaml"]
